# PanGu

./: colors.scheme.xml  databaseDrivers.xml  mavenVersion.xml  pom.xml  scala.xml  ui.lnf.xml  vcs.xml
_mac/: applicationLibraries.xml  path.macros.xml
colors/: Darcula copy.icls  _@user_Darcula.icls
hall-api/: pom.xml
hall-api/src/main/conf/development/: log4j.properties.example  scalikejdbc-generator.properties.example
hall-api/src/main/resources/: log4j.properties
hall-api/src/test/resources/: R5224010107772013070452.xml  R5224010109992013070451.xml  fpt5.xsd  mic.data  t.mnt  test-api.xml  test-v62.xml  test-v70.xml
hall-c/: pom.xml
hall-c/src/test/resources/: fpt4_2.fpt  fpt5.xsd  no-tp-count.fpt3
hall-c/src/test/resources/crash_fpt/: B6220161123125135823645.FPT
hall-c/src/test/resources/daku_error/: R2892521224222267625266.fpt  R5512123324222247625266.fpt  R5882126324222247301366.fpt  R6463923324222237625266.fpt
hall-database/: pom.xml
hall-extractor/: pom.xml
hall-extractor/c/: CMakeLists.txt
hall-extractor/c/src/: nirvana_hall_extractor_jni_NativeExtractor.cc  nirvana_hall_extractor_jni_NativeExtractor.h
hall-extractor/src/main/resources/: log4j.properties
hall-extractor/src/test/resources/: crash.img  display.img  display.mnt  fpt3_tp.fpt  fpt4_lp.fpt  lf.mnt  palm.mnt  plain.img  test.img  tp_1.img  wsq.data.uncompressed
hall-extractor/src/test/resources/shanghai/: 31011405020016040001_1_2.img.orginal  315EDF8AD8A2CC06E053FC00A8C0BB3D_error.img.orginal
hall-image/: pom.xml
hall-image-decoder/: pom.xml
hall-image/c/: CMakeLists.txt
hall-image/c/src/: nirvana_hall_image_jni_NativeImageConverter.cc  nirvana_hall_image_jni_NativeImageConverter.h
hall-image/c/src/common/: allocfet.c  computil.c  dataio.c  delfet.c  extrfet.c  fatalerr.c  filesize.c  freefet.c  lkupfet.c  nistcom.c  strfet.c  syserr.c  updatfet.c
hall-image/c/src/include/: defs.h  fet.h  gfimglib.h  jconfig.h  jinclude.h  jmorecfg.h  jpegb.h  jpegl.h  jpeglib.h  nistcom.h  util.h  wsq.h
hall-image/c/src/jni/: gfs.cc  jni_helper.cc  jni_helper.h  manufactory_win32.cc  manufactory_win32.h  nirvana_hall_image_jni_NativeImageConverter.cc  nirvana_hall_image_jni_NativeImageConverter.h  wsq.cc
hall-image/c/src/jpegb/: decoder.c  encoder.c  jcapimin.c  jcapistd.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jdapimin.c  jdapistd.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdphuff.c  jdsample.c  jerror.c  jfdctflt.c  jfdctfst.c  jfdctint.c  jidctflt.c  jidctint.c  jidctred.c  jmemmgr.c  jmemnobs.c  jquant1.c  (+5 more)
hall-image/c/src/jpegl/: huff_jpeg.c  huftable.c  tableio.c
hall-image/c/src/wsq/: decoder.c  encoder.c  huff.c  huff_jpeg.c  jpegl.h  ppi.c  tableio.c  tree.c  util.c
hall-image/c/test/: CMakeLists.txt  test_wsq.cc
hall-image/src/test/resources/: 1700.data  1900-1.data  finger_not_exist.data  gfs.fpt  lf.img  t.cpr  test_config.xml
hall-image/src/test/resources/fpt-error/: R2247526324226454323227_1.img  R2247526324226454323227_2.img
hall-image/src/test/resources/shanghai/: 31011405020016040001_1_10.img  31011405020016040001_1_2.img  31011405020016040001_1_4.img
hall-matcher/: pom.xml
hall-matcher/src/main/resources/: log4j.properties
hall-matcher/src/test/resources/: test-matcher.xml
hall-orm/: pom.xml
hall-orm-generator/: pom.xml
hall-orm-generator/src/main/resources/: hibernate.properties
hall-orm-generator/src/main/resources/orm/: Ejb3PropertyGetAnnotation.ftl  Pojo.ftl  PojoFields.ftl  (+2 more)
hall-orm-macro/: pom.xml
hall-protobuf-web/: pom.xml
hall-protocol/: pom.xml
hall-sdk/: pom.xml
hall-sdk/src/main/resources/: Nirvana.hall.js  test.html
hall-spark/: .gitignore  pom.xml
hall-spark/docs/: deploy.txt
hall-spark/src/main/resources/: A5234437224111222421246.fpt  R4562339224222222343247.fpt  R9999999999999999971736.fpt  fpt4.fpt  log4j.properties  tp_1.mnt  wsq.data
hall-spark/src/test/resources/: display.img  test_spark.xml  test_spark_bjsj.xml  test_spark_convert.xml  test_spark_error.xml  test_spark_file.xml  test_spark_ftp.xml  test_spark_full.xml  test_spark_idcard.xml  test_spark_migration.xml  test_spark_reExtract.xml  test_spark_valid.xml  test_spark_wjw.xml
hall-stream/: pom.xml
hall-stream/src/main/resources/: log4j.properties
hall-support/: pom.xml
hall-webservice/: pom.xml
hall-webservice/src/test/resources/: test-v62.xml  test-v70.xml  test-webservice.xml
support/assembly/: bin-api.xml  bin-extractor.xml  bin-image.xml  bin-matcher.xml  bin-stream.xml  bin-webservice.xml  version.properties
support/codeship/: settings.xml
support/config/: hall-api.xml.example  hall-extractor.xml.example  hall-image.xml.example  hall-matcher.xml.example  hall-stream.xml.example  hall-v62-proxy.xml.example  hall-v62.xml.example  hall-v70.xml.example  hall-webservice.xml.example  suowen-api.xml.example  suowen-api.xml.heroku
support/doc/: hall-matcher-sql.txt
support/scripts/: compile-extractor.bat  compile-img.bat  compile-nmake.bat  package-win32.sh
(+2528 files in other folders)
