PROJECT(hall-extractor4j)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(NIRVANA_VERSION_MAJOR 8)
SET(NIRVANA_VERSION_MINOR 15)
SET(NIRVANA_VERSION_PATCH 3)
SET(NIRVANA_VERSION_PATCH_2 17)

INCLUDE(CheckIncludeFiles)


# java jni support
FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
#INCLUDE(UseJava)
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH2})

FILE(GLOB_RECURSE HALL_EXTRACTOR_JNI_SOURCES ${PROJECT_SOURCE_DIR}/src/*)
LIST(APPEND HALL_EXTRACTOR_JNI_SOURCES ${PROJECT_SOURCE_DIR}/../../hall-image/c/src/jni/jni_helper.cc)
ADD_LIBRARY(hall-extractor4j SHARED ${HALL_EXTRACTOR_JNI_SOURCES})
TARGET_LINK_LIBRARIES(hall-extractor4j nirvana-kernel)


