PROJECT(hall-image4j)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(NIRVANA_VERSION_MAJOR 8)
SET(NIRVANA_VERSION_MINOR 15)
SET(NIRVANA_VERSION_PATCH 3)
SET(NIRVANA_VERSION_PATCH_2 17)

INCLUDE(CheckIncludeFiles)


# java jni support
FIND_PACKAGE(Java REQUIRED)
FIND_PACKAGE(JNI REQUIRED)
#INCLUDE(UseJava)
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${JAVA_INCLUDE_PATH2})

#needed by wsq compress
ADD_DEFINITIONS("-D__NBISLE__")

FILE(GLOB_RECURSE HALL_IMAGE_JNI_SOURCES ${PROJECT_SOURCE_DIR}/src/*)
ADD_LIBRARY(hall-image4j SHARED ${HALL_IMAGE_JNI_SOURCES})


